Add multiquery support to search endpoint.
+ Add function to convert tag names to database IDs.
+ Add dedicated function to search by headword.
+ Add dedicated function to search by tag.
+ Change search handler to compile results from multiple search methods.
+ Add Typeof function to util.go
+ Change default CORS setting to enabled.
+ Add new insertions to demo script to demonstrate multiquery support.
- Remove entry ID from Tag struct.
- Remove Tag struct usage from tagSearchHandler.
- Remove unnecessary JSON body requirement from tagSearchHandler.

--- a/config/config.json
+++ b/config/config.json
@@ -7,7 +7,7 @@
 	},
 	"host": "localhost",
 	"port": "8080",
-	"cors": false,
+	"cors": true,
 	"keystore": "my-super-secret-key",
 	"verbose": true
 }
