Rewrite README.md, fix db conn string.
+ Rewrite the README.
+ Update license.
+ Fix the db connection string so that more connection contexts are available.
! Remove relative directory config loading temporarily.

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,10 @@
 {
 	"database": {
 		"host":     "localhost",
-		"user":     "postgres",
-		"password": "postgres",
-		"database": "yugur"
+		"port":     5432,
+		"user":     "yugur",
+		"password": "yugur",
+		"name":     "yugur"
 	},
 	"host": "localhost",
 	"port": "8080",
